fixed cropped icon and display of version string at top-right menu

--- a/src/javascript/crypto/e2e/extension/ui/styles/base.css
+++ b/src/javascript/crypto/e2e/extension/ui/styles/base.css
@@ -272,6 +272,7 @@ input:focus {
   padding: 0 10px 0 45px;
   margin: 15px 0;
   color: YCOLOR_WHITE;
+  line-height: 32px;
 }
 
 .overlayDialog textarea {
